--- a/done/slot1.html
+++ b/done/slot1.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>Railroads Online Map</title>
     <script src="svg-pan-zoom.js"></script>
     <style>.myStuff {font-family: Verdana; font-size: 8pt;}</style>
   </head>
   <body>
     <div id="container" style="width: 850px; height: 850px; border:1px solid black; float:left">
-      <svg id="demo-tiger" xmlns="http://www.w3.org/2000/svg" style="display: inline; width: inherit; min-width: inherit; max-width: inherit; height: inherit; min-height: inherit; max-height: inherit; " viewBox="0 0 8000 8000" version="1.1">
+      <svg id="demo-tiger" xmlns="http://www.w3.org/2000/svg" style="display: inline; width: inherit; min-width: inherit; max-width: inherit; height: inherit; min-height: inherit; max-height: inherit; " viewBox="0 0 8000 8000">
     <defs>
     <pattern id="bild" x="0" y="0" width="9400" height="9600" patternUnits="userSpaceOnUse">
       <image x="-720" y="-770" width="9400" height="9600" href="bg5.png" />
