--- a/done/slot1.html
+++ b/done/slot1.html
@@ -8063,13 +8063,13 @@ O:0</text>
 I:24,0
 O:0</text>
 <text x="3907" y="3816" transform="rotate(90,3907, 3816)" >Freight Depot</text>
-<text x="2779" y="2190" transform="rotate(0,2779, 2190)" >F</text>
-<text x="2780" y="2142" transform="rotate(0,2780, 2142)" >F</text>
-<text x="3959" y="3971" transform="rotate(0,3959, 3971)" >F</text>
-<text x="1593" y="3224" transform="rotate(0,1593, 3224)" >F</text>
-<text x="4480" y="1168" transform="rotate(0,4480, 1168)" >F</text>
-<text x="5683" y="4786" transform="rotate(0,5683, 4786)" >F</text>
-<text x="6072" y="6633" transform="rotate(0,6072, 6633)" >F</text>
+<text x="2779" y="2190" transform="rotate(0,2779, 2190)" >F(297)</text>
+<text x="2780" y="2142" transform="rotate(0,2780, 2142)" >F(350)</text>
+<text x="3959" y="3971" transform="rotate(0,3959, 3971)" >F(0)</text>
+<text x="1593" y="3224" transform="rotate(0,1593, 3224)" >F(357)</text>
+<text x="4480" y="1168" transform="rotate(0,4480, 1168)" >F(135)</text>
+<text x="5683" y="4786" transform="rotate(0,5683, 4786)" >F(400)</text>
+<text x="6072" y="6633" transform="rotate(0,6072, 6633)" >F(400)</text>
 <text x="2498" y="2832" >W</text>
 <text x="5731" y="3654" >W</text>
 <text x="2155" y="2692" >W</text>
@@ -8094,7 +8094,262 @@ O:0</text>
     <button id="enable">enable</button>
     <button id="disable">disable</button>
     </div>
-    <div style="float:left" class="myStuff"><form method="POST" action="../converter.php"><input type="hidden" name="save" value="slot1.sav"><table class="myStuff"><tr><th>Type</th><th>Name</th><th>Number</th><th>near</th></tr><tr><td>porter_040</td><td><input name="name_0" value="BETSY"></td><td align="right"><input name="number_0" value="1"></td><td>Sawmill</td></tr><tr><td>flatcar_logs</td><td><input name="name_3" value="AVALEA"></td><td align="right"><input name="number_3" value="2605"></td><td>Sawmill</td></tr><tr><td>flatcar_stakes</td><td><input name="name_4" value="AGNETHA"></td><td align="right"><input name="number_4" value="2605"></td><td>Ironworks</td></tr><tr><td>porter_042</td><td><input name="name_5" value="ZWACKEL"></td><td align="right"><input name="number_5" value="7"></td><td>Sawmill</td></tr><tr><td>porter_042</td><td><input name="name_6" value="AVALEA"></td><td align="right"><input name="number_6" value="8"></td><td>Freight Depot</td></tr><tr><td>porter_042</td><td><input name="name_7" value="AGNETHA"></td><td align="right"><input name="number_7" value="9"></td><td>Ironworks</td></tr><tr><td>porter_042</td><td><input name="name_8" value="MINIZWERG"></td><td align="right"><input name="number_8" value="10"></td><td>Logging Camp</td></tr><tr><td>flatcar_logs</td><td><input name="name_9" value="MINIZWERG"></td><td align="right"><input name="number_9" value="2605"></td><td>Sawmill</td></tr><tr><td>flatcar_cordwood</td><td><input name="name_10" value="AUGUST"></td><td align="right"><input name="number_10" value="08"></td><td>Freight Depot</td></tr><tr><td>flatcar_cordwood</td><td><input name="name_11" value="SEPTEMBER"></td><td align="right"><input name="number_11" value="09"></td><td>Sawmill</td></tr><tr><td>flatcar_cordwood</td><td><input name="name_12" value="OKTOBER"></td><td align="right"><input name="number_12" value="10"></td><td>Logging Camp</td></tr><tr><td>flatcar_cordwood</td><td><input name="name_13" value="NOVEMBER"></td><td align="right"><input name="number_13" value="11"></td><td>Freight Depot</td></tr><tr><td>flatcar_stakes</td><td><input name="name_14" value="SOMMER"></td><td align="right"><input name="number_14" value=""></td><td>Sawmill</td></tr><tr><td>flatcar_stakes</td><td><input name="name_15" value="WINTER"></td><td align="right"><input name="number_15" value=""></td><td>Sawmill</td></tr><tr><td>flatcar_hopper</td><td><input name="name_16" value="FUCHS"></td><td align="right"><input name="number_16" value=""></td><td>Smelter</td></tr><tr><td>flatcar_hopper</td><td><input name="name_17" value="HASE"></td><td align="right"><input name="number_17" value=""></td><td>Smelter</td></tr><tr><td>flatcar_stakes</td><td><input name="name_18" value="FRÌHLING"></td><td align="right"><input name="number_18" value=""></td><td>Iron Mine</td></tr><tr><td>porter_042</td><td><input name="name_19" value="WILLI"></td><td align="right"><input name="number_19" value="12"></td><td>Smelter</td></tr><tr><td>flatcar_stakes</td><td><input name="name_20" value="JANUAR"></td><td align="right"><input name="number_20" value="01"></td><td>Ironworks</td></tr><tr><td>flatcar_stakes</td><td><input name="name_21" value="FEBRUAR"></td><td align="right"><input name="number_21" value="02"></td><td>Ironworks</td></tr><tr><td>flatcar_stakes</td><td><input name="name_22" value="MÄRZ"></td><td align="right"><input name="number_22" value="03"></td><td>Sawmill</td></tr><tr><td>flatcar_stakes</td><td><input name="name_23" value="APRIL"></td><td align="right"><input name="number_23" value="04"></td><td>Sawmill</td></tr><tr><td>porter_042</td><td><input name="name_40" value="JASNA"></td><td align="right"><input name="number_40" value="26"></td><td>Sawmill</td></tr><tr><td>porter_042</td><td><input name="name_43" value="MOLLY"></td><td align="right"><input name="number_43" value="5"></td><td>Smelter</td></tr><tr><td>flatcar_logs</td><td><input name="name_44" value="BOB"></td><td align="right"><input name="number_44" value="TL1"></td><td>Sawmill</td></tr><tr><td>flatcar_logs</td><td><input name="name_45" value="DYLAN"></td><td align="right"><input name="number_45" value="TL2"></td><td>Logging Camp</td></tr><tr><td>flatcar_logs</td><td><input name="name_46" value="MARLEY"></td><td align="right"><input name="number_46" value="TL3"></td><td>Logging Camp</td></tr><tr><td>flatcar_logs</td><td><input name="name_47" value="BRANDON"></td><td align="right"><input name="number_47" value="TL4"></td><td>Logging Camp</td></tr><tr><td>class70</td><td><input name="name_64" value="EMMA"></td><td align="right"><input name="number_64" value="003"></td><td>Logging Camp</td></tr><tr><td>class70_tender</td><td><input name="name_65" value="EMMA HOLZ"></td><td align="right"><input name="number_65" value="003"></td><td>Logging Camp</td></tr><tr><td>porter_042</td><td><input name="name_66" value="AURELIA"></td><td align="right"><input name="number_66" value="8"></td><td>Freight Depot</td></tr><tr><td>flatcar_hopper</td><td><input name="name_67" value="GURKE"></td><td align="right"><input name="number_67" value=""></td><td>Freight Depot</td></tr><tr><td>flatcar_hopper</td><td><input name="name_68" value="TOMATE"></td><td align="right"><input name="number_68" value=""></td><td>Freight Depot</td></tr><tr><td>flatcar_hopper</td><td><input name="name_69" value="PAPRIKA"></td><td align="right"><input name="number_69" value=""></td><td>Freight Depot</td></tr><tr><td>flatcar_hopper</td><td><input name="name_70" value="BROKOLI"></td><td align="right"><input name="number_70" value=""></td><td>Freight Depot</td></tr></table><input type="submit" value="DO NOT CLICK!"></form></div>
+    <div style="float:left" class="myStuff"><form method="POST" action="../converter.php"><input type="hidden" name="save" value="slot1.sav">
+<table class="myStuff">
+<tr>
+<th>Type</th>
+<th>Name</th>
+<th>Number</th>
+<th>near</th>
+<th>Cargo</th>
+<th>Amount</th>
+</tr>
+<tr>
+<td>porter_040</td>
+<td>BETSY</td>
+<td align="right"><input size="5" maxlength="15" name="number_0" value="1"></td>
+<td>Sawmill</td>
+<td>firewood</td>
+<td>66</td>
+</tr><tr>
+<td>flatcar_logs</td>
+<td>AVALEA</td>
+<td align="right"><input size="5" maxlength="15" name="number_3" value="2605"></td>
+<td>Sawmill</td>
+<td>log</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_stakes</td>
+<td>AGNETHA</td>
+<td align="right"><input size="5" maxlength="15" name="number_4" value="2605"></td>
+<td>Ironworks</td>
+<td>rawiron</td>
+<td>0</td>
+</tr><tr>
+<td>porter_042</td>
+<td>ZWACKEL</td>
+<td align="right"><input size="5" maxlength="15" name="number_5" value="7"></td>
+<td>Sawmill</td>
+<td>firewood</td>
+<td>154</td>
+</tr><tr>
+<td>porter_042</td>
+<td>AVALEA</td>
+<td align="right"><input size="5" maxlength="15" name="number_6" value="8"></td>
+<td>Freight Depot</td>
+<td>firewood</td>
+<td>135</td>
+</tr><tr>
+<td>porter_042</td>
+<td>AGNETHA</td>
+<td align="right"><input size="5" maxlength="15" name="number_7" value="9"></td>
+<td>Ironworks</td>
+<td>firewood</td>
+<td>132</td>
+</tr><tr>
+<td>porter_042</td>
+<td>MINIZWERG</td>
+<td align="right"><input size="5" maxlength="15" name="number_8" value="10"></td>
+<td>Logging Camp</td>
+<td>firewood</td>
+<td>51</td>
+</tr><tr>
+<td>flatcar_logs</td>
+<td>MINIZWERG</td>
+<td align="right"><input size="5" maxlength="15" name="number_9" value="2605"></td>
+<td>Sawmill</td>
+<td>log</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_cordwood</td>
+<td>AUGUST</td>
+<td align="right"><input size="5" maxlength="15" name="number_10" value="08"></td>
+<td>Freight Depot</td>
+<td>cordwood</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_cordwood</td>
+<td>SEPTEMBER</td>
+<td align="right"><input size="5" maxlength="15" name="number_11" value="09"></td>
+<td>Sawmill</td>
+<td>cordwood</td>
+<td>8</td>
+</tr><tr>
+<td>flatcar_cordwood</td>
+<td>OKTOBER</td>
+<td align="right"><input size="5" maxlength="15" name="number_12" value="10"></td>
+<td>Logging Camp</td>
+<td>cordwood</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_cordwood</td>
+<td>NOVEMBER</td>
+<td align="right"><input size="5" maxlength="15" name="number_13" value="11"></td>
+<td>Freight Depot</td>
+<td>cordwood</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_stakes</td>
+<td>SOMMER</td>
+<td align="right"><input size="5" maxlength="15" name="number_14" value=""></td>
+<td>Sawmill</td>
+<td>lumber</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_stakes</td>
+<td>WINTER</td>
+<td align="right"><input size="5" maxlength="15" name="number_15" value=""></td>
+<td>Sawmill</td>
+<td>rail</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_hopper</td>
+<td>FUCHS</td>
+<td align="right"><input size="5" maxlength="15" name="number_16" value=""></td>
+<td>Smelter</td>
+<td>ironore</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_hopper</td>
+<td>HASE</td>
+<td align="right"><input size="5" maxlength="15" name="number_17" value=""></td>
+<td>Smelter</td>
+<td>ironore</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_stakes</td>
+<td>FRÌHLING</td>
+<td align="right"><input size="5" maxlength="15" name="number_18" value=""></td>
+<td>Iron Mine</td>
+<td>lumber</td>
+<td>6</td>
+</tr><tr>
+<td>porter_042</td>
+<td>WILLI</td>
+<td align="right"><input size="5" maxlength="15" name="number_19" value="12"></td>
+<td>Smelter</td>
+<td>firewood</td>
+<td>36</td>
+</tr><tr>
+<td>flatcar_stakes</td>
+<td>JANUAR</td>
+<td align="right"><input size="5" maxlength="15" name="number_20" value="01"></td>
+<td>Ironworks</td>
+<td>rawiron</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_stakes</td>
+<td>FEBRUAR</td>
+<td align="right"><input size="5" maxlength="15" name="number_21" value="02"></td>
+<td>Ironworks</td>
+<td>rawiron</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_stakes</td>
+<td>MÄRZ</td>
+<td align="right"><input size="5" maxlength="15" name="number_22" value="03"></td>
+<td>Sawmill</td>
+<td>lumber</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_stakes</td>
+<td>APRIL</td>
+<td align="right"><input size="5" maxlength="15" name="number_23" value="04"></td>
+<td>Sawmill</td>
+<td>beam</td>
+<td>0</td>
+</tr><tr>
+<td>porter_042</td>
+<td>JASNA</td>
+<td align="right"><input size="5" maxlength="15" name="number_40" value="26"></td>
+<td>Sawmill</td>
+<td>firewood</td>
+<td>164</td>
+</tr><tr>
+<td>porter_042</td>
+<td>MOLLY</td>
+<td align="right"><input size="5" maxlength="15" name="number_43" value="5"></td>
+<td>Smelter</td>
+<td>firewood</td>
+<td>151</td>
+</tr><tr>
+<td>flatcar_logs</td>
+<td>BOB</td>
+<td align="right"><input size="5" maxlength="15" name="number_44" value="TL1"></td>
+<td>Sawmill</td>
+<td>log</td>
+<td>3</td>
+</tr><tr>
+<td>flatcar_logs</td>
+<td>DYLAN</td>
+<td align="right"><input size="5" maxlength="15" name="number_45" value="TL2"></td>
+<td>Logging Camp</td>
+<td>log</td>
+<td>6</td>
+</tr><tr>
+<td>flatcar_logs</td>
+<td>MARLEY</td>
+<td align="right"><input size="5" maxlength="15" name="number_46" value="TL3"></td>
+<td>Logging Camp</td>
+<td>log</td>
+<td>4</td>
+</tr><tr>
+<td>flatcar_logs</td>
+<td>BRANDON</td>
+<td align="right"><input size="5" maxlength="15" name="number_47" value="TL4"></td>
+<td>Logging Camp</td>
+<td>log</td>
+<td>0</td>
+</tr><tr>
+<td>class70</td>
+<td>EMMA</td>
+<td align="right"><input size="5" maxlength="15" name="number_64" value="003"></td>
+<td>Logging Camp</td>
+<td>-</td>
+<td>-</td>
+</tr><tr>
+<td>class70_tender</td>
+<td>EMMA HOLZ</td>
+<td align="right"><input size="5" maxlength="15" name="number_65" value="003"></td>
+<td>Logging Camp</td>
+<td>firewood</td>
+<td>1133</td>
+</tr><tr>
+<td>porter_042</td>
+<td>AURELIA</td>
+<td align="right"><input size="5" maxlength="15" name="number_66" value="8"></td>
+<td>Freight Depot</td>
+<td>firewood</td>
+<td>128</td>
+</tr><tr>
+<td>flatcar_hopper</td>
+<td>GURKE</td>
+<td align="right"><input size="5" maxlength="15" name="number_67" value=""></td>
+<td>Freight Depot</td>
+<td>coal</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_hopper</td>
+<td>TOMATE</td>
+<td align="right"><input size="5" maxlength="15" name="number_68" value=""></td>
+<td>Freight Depot</td>
+<td>coal</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_hopper</td>
+<td>PAPRIKA</td>
+<td align="right"><input size="5" maxlength="15" name="number_69" value=""></td>
+<td>Freight Depot</td>
+<td>coal</td>
+<td>0</td>
+</tr><tr>
+<td>flatcar_hopper</td>
+<td>BROKOLI</td>
+<td align="right"><input size="5" maxlength="15" name="number_70" value=""></td>
+<td>Freight Depot</td>
+<td>coal</td>
+<td>0</td>
+</tr></table><input type="submit" value="RENUMBER"></form></div>
 
 
     <script>
