--- a/done/slot1.html
+++ b/done/slot1.html
@@ -8110,196 +8110,196 @@ O:0</text>
 <td align="right"><input size="5" maxlength="15" name="number_0" value="1"></td>
 <td>Sawmill</td>
 <td>firewood</td>
-<td>66</td>
+<td><input size="2" maxlength="2" name="tenderamount_0" value="66"></td>
 </tr><tr>
 <td>flatcar_logs</td>
 <td>AVALEA</td>
 <td align="right"><input size="5" maxlength="15" name="number_3" value="2605"></td>
 <td>Sawmill</td>
 <td>log</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_3" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
 <td>AGNETHA</td>
 <td align="right"><input size="5" maxlength="15" name="number_4" value="2605"></td>
 <td>Ironworks</td>
 <td>rawiron</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_4" value="0"></td>
 </tr><tr>
 <td>porter_042</td>
 <td>ZWACKEL</td>
 <td align="right"><input size="5" maxlength="15" name="number_5" value="7"></td>
 <td>Sawmill</td>
 <td>firewood</td>
-<td>154</td>
+<td><input size="2" maxlength="2" name="tenderamount_5" value="154"></td>
 </tr><tr>
 <td>porter_042</td>
 <td>AVALEA</td>
 <td align="right"><input size="5" maxlength="15" name="number_6" value="8"></td>
 <td>Freight Depot</td>
 <td>firewood</td>
-<td>135</td>
+<td><input size="2" maxlength="2" name="tenderamount_6" value="135"></td>
 </tr><tr>
 <td>porter_042</td>
 <td>AGNETHA</td>
 <td align="right"><input size="5" maxlength="15" name="number_7" value="9"></td>
 <td>Ironworks</td>
 <td>firewood</td>
-<td>132</td>
+<td><input size="2" maxlength="2" name="tenderamount_7" value="132"></td>
 </tr><tr>
 <td>porter_042</td>
 <td>MINIZWERG</td>
 <td align="right"><input size="5" maxlength="15" name="number_8" value="10"></td>
 <td>Logging Camp</td>
 <td>firewood</td>
-<td>51</td>
+<td><input size="2" maxlength="2" name="tenderamount_8" value="51"></td>
 </tr><tr>
 <td>flatcar_logs</td>
 <td>MINIZWERG</td>
 <td align="right"><input size="5" maxlength="15" name="number_9" value="2605"></td>
 <td>Sawmill</td>
 <td>log</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_9" value="0"></td>
 </tr><tr>
 <td>flatcar_cordwood</td>
 <td>AUGUST</td>
 <td align="right"><input size="5" maxlength="15" name="number_10" value="08"></td>
 <td>Freight Depot</td>
 <td>cordwood</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_10" value="0"></td>
 </tr><tr>
 <td>flatcar_cordwood</td>
 <td>SEPTEMBER</td>
 <td align="right"><input size="5" maxlength="15" name="number_11" value="09"></td>
 <td>Sawmill</td>
 <td>cordwood</td>
-<td>8</td>
+<td><input size="2" maxlength="2" name="freightamount_11" value="8"></td>
 </tr><tr>
 <td>flatcar_cordwood</td>
 <td>OKTOBER</td>
 <td align="right"><input size="5" maxlength="15" name="number_12" value="10"></td>
 <td>Logging Camp</td>
 <td>cordwood</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_12" value="0"></td>
 </tr><tr>
 <td>flatcar_cordwood</td>
 <td>NOVEMBER</td>
 <td align="right"><input size="5" maxlength="15" name="number_13" value="11"></td>
 <td>Freight Depot</td>
 <td>cordwood</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_13" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
 <td>SOMMER</td>
 <td align="right"><input size="5" maxlength="15" name="number_14" value=""></td>
 <td>Sawmill</td>
 <td>lumber</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_14" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
 <td>WINTER</td>
 <td align="right"><input size="5" maxlength="15" name="number_15" value=""></td>
 <td>Sawmill</td>
 <td>rail</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_15" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
 <td>FUCHS</td>
 <td align="right"><input size="5" maxlength="15" name="number_16" value=""></td>
 <td>Smelter</td>
 <td>ironore</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_16" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
 <td>HASE</td>
 <td align="right"><input size="5" maxlength="15" name="number_17" value=""></td>
 <td>Smelter</td>
 <td>ironore</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_17" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
 <td>FRÌHLING</td>
 <td align="right"><input size="5" maxlength="15" name="number_18" value=""></td>
 <td>Iron Mine</td>
 <td>lumber</td>
-<td>6</td>
+<td><input size="2" maxlength="2" name="freightamount_18" value="6"></td>
 </tr><tr>
 <td>porter_042</td>
 <td>WILLI</td>
 <td align="right"><input size="5" maxlength="15" name="number_19" value="12"></td>
 <td>Smelter</td>
 <td>firewood</td>
-<td>36</td>
+<td><input size="2" maxlength="2" name="tenderamount_19" value="36"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
 <td>JANUAR</td>
 <td align="right"><input size="5" maxlength="15" name="number_20" value="01"></td>
 <td>Ironworks</td>
 <td>rawiron</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_20" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
 <td>FEBRUAR</td>
 <td align="right"><input size="5" maxlength="15" name="number_21" value="02"></td>
 <td>Ironworks</td>
 <td>rawiron</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_21" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
 <td>MÄRZ</td>
 <td align="right"><input size="5" maxlength="15" name="number_22" value="03"></td>
 <td>Sawmill</td>
 <td>lumber</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_22" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
 <td>APRIL</td>
 <td align="right"><input size="5" maxlength="15" name="number_23" value="04"></td>
 <td>Sawmill</td>
 <td>beam</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_23" value="0"></td>
 </tr><tr>
 <td>porter_042</td>
 <td>JASNA</td>
 <td align="right"><input size="5" maxlength="15" name="number_40" value="26"></td>
 <td>Sawmill</td>
 <td>firewood</td>
-<td>164</td>
+<td><input size="2" maxlength="2" name="tenderamount_40" value="164"></td>
 </tr><tr>
 <td>porter_042</td>
 <td>MOLLY</td>
 <td align="right"><input size="5" maxlength="15" name="number_43" value="5"></td>
 <td>Smelter</td>
 <td>firewood</td>
-<td>151</td>
+<td><input size="2" maxlength="2" name="tenderamount_43" value="151"></td>
 </tr><tr>
 <td>flatcar_logs</td>
 <td>BOB</td>
 <td align="right"><input size="5" maxlength="15" name="number_44" value="TL1"></td>
 <td>Sawmill</td>
 <td>log</td>
-<td>3</td>
+<td><input size="2" maxlength="2" name="freightamount_44" value="3"></td>
 </tr><tr>
 <td>flatcar_logs</td>
 <td>DYLAN</td>
 <td align="right"><input size="5" maxlength="15" name="number_45" value="TL2"></td>
 <td>Logging Camp</td>
 <td>log</td>
-<td>6</td>
+<td><input size="2" maxlength="2" name="freightamount_45" value="6"></td>
 </tr><tr>
 <td>flatcar_logs</td>
 <td>MARLEY</td>
 <td align="right"><input size="5" maxlength="15" name="number_46" value="TL3"></td>
 <td>Logging Camp</td>
 <td>log</td>
-<td>4</td>
+<td><input size="2" maxlength="2" name="freightamount_46" value="4"></td>
 </tr><tr>
 <td>flatcar_logs</td>
 <td>BRANDON</td>
 <td align="right"><input size="5" maxlength="15" name="number_47" value="TL4"></td>
 <td>Logging Camp</td>
 <td>log</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_47" value="0"></td>
 </tr><tr>
 <td>class70</td>
 <td>EMMA</td>
@@ -8313,42 +8313,42 @@ O:0</text>
 <td align="right"><input size="5" maxlength="15" name="number_65" value="003"></td>
 <td>Logging Camp</td>
 <td>firewood</td>
-<td>1133</td>
+<td><input size="2" maxlength="2" name="tenderamount_65" value="1133"></td>
 </tr><tr>
 <td>porter_042</td>
 <td>AURELIA</td>
 <td align="right"><input size="5" maxlength="15" name="number_66" value="8"></td>
 <td>Freight Depot</td>
 <td>firewood</td>
-<td>128</td>
+<td><input size="2" maxlength="2" name="tenderamount_66" value="128"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
 <td>GURKE</td>
 <td align="right"><input size="5" maxlength="15" name="number_67" value=""></td>
 <td>Freight Depot</td>
 <td>coal</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_67" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
 <td>TOMATE</td>
 <td align="right"><input size="5" maxlength="15" name="number_68" value=""></td>
 <td>Freight Depot</td>
 <td>coal</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_68" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
 <td>PAPRIKA</td>
 <td align="right"><input size="5" maxlength="15" name="number_69" value=""></td>
 <td>Freight Depot</td>
 <td>coal</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_69" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
 <td>BROKOLI</td>
 <td align="right"><input size="5" maxlength="15" name="number_70" value=""></td>
 <td>Freight Depot</td>
 <td>coal</td>
-<td>0</td>
+<td><input size="2" maxlength="2" name="freightamount_70" value="0"></td>
 </tr></table><input type="submit" value="RENUMBER"></form></div>
 
 
