Front end design, initial commit

--- a/done/slot1.html
+++ b/done/slot1.html
@@ -8106,246 +8106,246 @@ O:0</text>
 </tr>
 <tr>
 <td>porter_040</td>
-<td>BETSY</td>
+<td>              <input size="5" maxlength="15" name="name_0" value="BETSY"></td>
 <td align="right"><input size="5" maxlength="15" name="number_0" value="1"></td>
 <td>Sawmill</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_0" value="66"></td>
 </tr><tr>
 <td>flatcar_logs</td>
-<td>AVALEA</td>
+<td>              <input size="5" maxlength="15" name="name_3" value="AVALEA"></td>
 <td align="right"><input size="5" maxlength="15" name="number_3" value="2605"></td>
 <td>Sawmill</td>
 <td>log</td>
 <td><input size="2" maxlength="2" name="freightamount_3" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
-<td>AGNETHA</td>
+<td>              <input size="5" maxlength="15" name="name_4" value="AGNETHA"></td>
 <td align="right"><input size="5" maxlength="15" name="number_4" value="2605"></td>
 <td>Ironworks</td>
 <td>rawiron</td>
 <td><input size="2" maxlength="2" name="freightamount_4" value="0"></td>
 </tr><tr>
 <td>porter_042</td>
-<td>ZWACKEL</td>
+<td>              <input size="5" maxlength="15" name="name_5" value="ZWACKEL"></td>
 <td align="right"><input size="5" maxlength="15" name="number_5" value="7"></td>
 <td>Sawmill</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_5" value="154"></td>
 </tr><tr>
 <td>porter_042</td>
-<td>AVALEA</td>
+<td>              <input size="5" maxlength="15" name="name_6" value="AVALEA"></td>
 <td align="right"><input size="5" maxlength="15" name="number_6" value="8"></td>
 <td>Freight Depot</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_6" value="135"></td>
 </tr><tr>
 <td>porter_042</td>
-<td>AGNETHA</td>
+<td>              <input size="5" maxlength="15" name="name_7" value="AGNETHA"></td>
 <td align="right"><input size="5" maxlength="15" name="number_7" value="9"></td>
 <td>Ironworks</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_7" value="132"></td>
 </tr><tr>
 <td>porter_042</td>
-<td>MINIZWERG</td>
+<td>              <input size="5" maxlength="15" name="name_8" value="MINIZWERG"></td>
 <td align="right"><input size="5" maxlength="15" name="number_8" value="10"></td>
 <td>Logging Camp</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_8" value="51"></td>
 </tr><tr>
 <td>flatcar_logs</td>
-<td>MINIZWERG</td>
+<td>              <input size="5" maxlength="15" name="name_9" value="MINIZWERG"></td>
 <td align="right"><input size="5" maxlength="15" name="number_9" value="2605"></td>
 <td>Sawmill</td>
 <td>log</td>
 <td><input size="2" maxlength="2" name="freightamount_9" value="0"></td>
 </tr><tr>
 <td>flatcar_cordwood</td>
-<td>AUGUST</td>
+<td>              <input size="5" maxlength="15" name="name_10" value="AUGUST"></td>
 <td align="right"><input size="5" maxlength="15" name="number_10" value="08"></td>
 <td>Freight Depot</td>
 <td>cordwood</td>
 <td><input size="2" maxlength="2" name="freightamount_10" value="0"></td>
 </tr><tr>
 <td>flatcar_cordwood</td>
-<td>SEPTEMBER</td>
+<td>              <input size="5" maxlength="15" name="name_11" value="SEPTEMBER"></td>
 <td align="right"><input size="5" maxlength="15" name="number_11" value="09"></td>
 <td>Sawmill</td>
 <td>cordwood</td>
 <td><input size="2" maxlength="2" name="freightamount_11" value="8"></td>
 </tr><tr>
 <td>flatcar_cordwood</td>
-<td>OKTOBER</td>
+<td>              <input size="5" maxlength="15" name="name_12" value="OKTOBER"></td>
 <td align="right"><input size="5" maxlength="15" name="number_12" value="10"></td>
 <td>Logging Camp</td>
 <td>cordwood</td>
 <td><input size="2" maxlength="2" name="freightamount_12" value="0"></td>
 </tr><tr>
 <td>flatcar_cordwood</td>
-<td>NOVEMBER</td>
+<td>              <input size="5" maxlength="15" name="name_13" value="NOVEMBER"></td>
 <td align="right"><input size="5" maxlength="15" name="number_13" value="11"></td>
 <td>Freight Depot</td>
 <td>cordwood</td>
 <td><input size="2" maxlength="2" name="freightamount_13" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
-<td>SOMMER</td>
-<td align="right"><input size="5" maxlength="15" name="number_14" value=""></td>
+<td>              <input size="5" maxlength="15" name="name_14" value="SOMMER"></td>
+<td align="right"><input size="5" maxlength="15" name="number_14" value="."></td>
 <td>Sawmill</td>
 <td>lumber</td>
 <td><input size="2" maxlength="2" name="freightamount_14" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
-<td>WINTER</td>
-<td align="right"><input size="5" maxlength="15" name="number_15" value=""></td>
+<td>              <input size="5" maxlength="15" name="name_15" value="WINTER"></td>
+<td align="right"><input size="5" maxlength="15" name="number_15" value="."></td>
 <td>Sawmill</td>
 <td>rail</td>
 <td><input size="2" maxlength="2" name="freightamount_15" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
-<td>FUCHS</td>
-<td align="right"><input size="5" maxlength="15" name="number_16" value=""></td>
+<td>              <input size="5" maxlength="15" name="name_16" value="FUCHS"></td>
+<td align="right"><input size="5" maxlength="15" name="number_16" value="."></td>
 <td>Smelter</td>
 <td>ironore</td>
 <td><input size="2" maxlength="2" name="freightamount_16" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
-<td>HASE</td>
-<td align="right"><input size="5" maxlength="15" name="number_17" value=""></td>
+<td>              <input size="5" maxlength="15" name="name_17" value="HASE"></td>
+<td align="right"><input size="5" maxlength="15" name="number_17" value="."></td>
 <td>Smelter</td>
 <td>ironore</td>
 <td><input size="2" maxlength="2" name="freightamount_17" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
-<td>FRÌHLING</td>
-<td align="right"><input size="5" maxlength="15" name="number_18" value=""></td>
+<td>              <input size="5" maxlength="15" name="name_18" value="FRÜHLING"></td>
+<td align="right"><input size="5" maxlength="15" name="number_18" value="."></td>
 <td>Iron Mine</td>
 <td>lumber</td>
 <td><input size="2" maxlength="2" name="freightamount_18" value="6"></td>
 </tr><tr>
 <td>porter_042</td>
-<td>WILLI</td>
+<td>              <input size="5" maxlength="15" name="name_19" value="WILLI"></td>
 <td align="right"><input size="5" maxlength="15" name="number_19" value="12"></td>
 <td>Smelter</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_19" value="36"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
-<td>JANUAR</td>
+<td>              <input size="5" maxlength="15" name="name_20" value="JANUAR"></td>
 <td align="right"><input size="5" maxlength="15" name="number_20" value="01"></td>
 <td>Ironworks</td>
 <td>rawiron</td>
 <td><input size="2" maxlength="2" name="freightamount_20" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
-<td>FEBRUAR</td>
+<td>              <input size="5" maxlength="15" name="name_21" value="FEBRUAR"></td>
 <td align="right"><input size="5" maxlength="15" name="number_21" value="02"></td>
 <td>Ironworks</td>
 <td>rawiron</td>
 <td><input size="2" maxlength="2" name="freightamount_21" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
-<td>MÄRZ</td>
+<td>              <input size="5" maxlength="15" name="name_22" value="MÄRZ"></td>
 <td align="right"><input size="5" maxlength="15" name="number_22" value="03"></td>
 <td>Sawmill</td>
 <td>lumber</td>
 <td><input size="2" maxlength="2" name="freightamount_22" value="0"></td>
 </tr><tr>
 <td>flatcar_stakes</td>
-<td>APRIL</td>
+<td>              <input size="5" maxlength="15" name="name_23" value="APRIL"></td>
 <td align="right"><input size="5" maxlength="15" name="number_23" value="04"></td>
 <td>Sawmill</td>
 <td>beam</td>
 <td><input size="2" maxlength="2" name="freightamount_23" value="0"></td>
 </tr><tr>
 <td>porter_042</td>
-<td>JASNA</td>
+<td>              <input size="5" maxlength="15" name="name_40" value="JASNA"></td>
 <td align="right"><input size="5" maxlength="15" name="number_40" value="26"></td>
 <td>Sawmill</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_40" value="164"></td>
 </tr><tr>
 <td>porter_042</td>
-<td>MOLLY</td>
+<td>              <input size="5" maxlength="15" name="name_43" value="MOLLY"></td>
 <td align="right"><input size="5" maxlength="15" name="number_43" value="5"></td>
 <td>Smelter</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_43" value="151"></td>
 </tr><tr>
 <td>flatcar_logs</td>
-<td>BOB</td>
+<td>              <input size="5" maxlength="15" name="name_44" value="BOB"></td>
 <td align="right"><input size="5" maxlength="15" name="number_44" value="TL1"></td>
 <td>Sawmill</td>
 <td>log</td>
 <td><input size="2" maxlength="2" name="freightamount_44" value="3"></td>
 </tr><tr>
 <td>flatcar_logs</td>
-<td>DYLAN</td>
+<td>              <input size="5" maxlength="15" name="name_45" value="DYLAN"></td>
 <td align="right"><input size="5" maxlength="15" name="number_45" value="TL2"></td>
 <td>Logging Camp</td>
 <td>log</td>
 <td><input size="2" maxlength="2" name="freightamount_45" value="6"></td>
 </tr><tr>
 <td>flatcar_logs</td>
-<td>MARLEY</td>
+<td>              <input size="5" maxlength="15" name="name_46" value="MARLEY"></td>
 <td align="right"><input size="5" maxlength="15" name="number_46" value="TL3"></td>
 <td>Logging Camp</td>
 <td>log</td>
 <td><input size="2" maxlength="2" name="freightamount_46" value="4"></td>
 </tr><tr>
 <td>flatcar_logs</td>
-<td>BRANDON</td>
+<td>              <input size="5" maxlength="15" name="name_47" value="BRANDON"></td>
 <td align="right"><input size="5" maxlength="15" name="number_47" value="TL4"></td>
 <td>Logging Camp</td>
 <td>log</td>
 <td><input size="2" maxlength="2" name="freightamount_47" value="0"></td>
 </tr><tr>
 <td>class70</td>
-<td>EMMA</td>
+<td>              <input size="5" maxlength="15" name="name_64" value="EMMA"></td>
 <td align="right"><input size="5" maxlength="15" name="number_64" value="003"></td>
 <td>Logging Camp</td>
 <td>-</td>
 <td>-</td>
 </tr><tr>
 <td>class70_tender</td>
-<td>EMMA HOLZ</td>
+<td>              <input size="5" maxlength="15" name="name_65" value="EMMA HOLZ"></td>
 <td align="right"><input size="5" maxlength="15" name="number_65" value="003"></td>
 <td>Logging Camp</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_65" value="1133"></td>
 </tr><tr>
 <td>porter_042</td>
-<td>AURELIA</td>
+<td>              <input size="5" maxlength="15" name="name_66" value="AURELIA"></td>
 <td align="right"><input size="5" maxlength="15" name="number_66" value="8"></td>
 <td>Freight Depot</td>
 <td>firewood</td>
 <td><input size="2" maxlength="2" name="tenderamount_66" value="128"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
-<td>GURKE</td>
-<td align="right"><input size="5" maxlength="15" name="number_67" value=""></td>
+<td>              <input size="5" maxlength="15" name="name_67" value="GURKE"></td>
+<td align="right"><input size="5" maxlength="15" name="number_67" value="."></td>
 <td>Freight Depot</td>
 <td>coal</td>
 <td><input size="2" maxlength="2" name="freightamount_67" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
-<td>TOMATE</td>
-<td align="right"><input size="5" maxlength="15" name="number_68" value=""></td>
+<td>              <input size="5" maxlength="15" name="name_68" value="TOMATE"></td>
+<td align="right"><input size="5" maxlength="15" name="number_68" value="."></td>
 <td>Freight Depot</td>
 <td>coal</td>
 <td><input size="2" maxlength="2" name="freightamount_68" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
-<td>PAPRIKA</td>
-<td align="right"><input size="5" maxlength="15" name="number_69" value=""></td>
+<td>              <input size="5" maxlength="15" name="name_69" value="PAPRIKA"></td>
+<td align="right"><input size="5" maxlength="15" name="number_69" value="."></td>
 <td>Freight Depot</td>
 <td>coal</td>
 <td><input size="2" maxlength="2" name="freightamount_69" value="0"></td>
 </tr><tr>
 <td>flatcar_hopper</td>
-<td>BROKOLI</td>
-<td align="right"><input size="5" maxlength="15" name="number_70" value=""></td>
+<td>              <input size="5" maxlength="15" name="name_70" value="BROKOLI"></td>
+<td align="right"><input size="5" maxlength="15" name="number_70" value="."></td>
 <td>Freight Depot</td>
 <td>coal</td>
 <td><input size="2" maxlength="2" name="freightamount_70" value="0"></td>
