Changed to actual database, restructured the project files and made some changes to the code

--- a/done/slot1.html
+++ b/done/slot1.html
@@ -8096,7 +8096,7 @@ O:0</text>
     <button id="enable">enable</button>
     <button id="disable">disable</button>
 </div>
-<div style="float:left" class="myStuff"><form method="POST" action="../converter.php"><input type="hidden" name="save" value="slot1.sav">
+<div style="float:left" class="myStuff"><form method="POST" action="../utils/converter.php"><input type="hidden" name="save" value="slot1.sav">
 <table class="myStuff">
 <tr>
 <th>Type</th>
