--- a/map.template.html
+++ b/map.template.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Railroads Online Map</title>
-    <script src="svg-pan-zoom.js"></script>
-    <style>.myStuff {font-family: Verdana; font-size: 8pt;}</style>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <script type="text/javascript" src="svg-pan-zoom.js"></script>
 </head>
 <body>
-<div id="container" style="width: 850px; height: 850px; border:1px solid black; float:left">
+<header class="header">
+    <a class="button" href="/">Go Back</a>
+</header>
+<div id="container" style="width: 850px; height: 850px; border:1px solid black;">
     <svg id="demo-tiger" xmlns="http://www.w3.org/2000/svg" style="display: inline; width: inherit; min-width: inherit; max-width: inherit; height: inherit; min-height: inherit; max-height: inherit; " viewBox="0 0 8000 8000">
         <defs>
             ###PATTERN###
@@ -17,7 +23,7 @@
     <button id="enable">enable</button>
     <button id="disable">disable</button>
 </div>
-<div style="float:left" class="myStuff">###EXTRAS###</div>
+<div class="myStuff">###EXTRAS###</div>
 
 <script>
     // Don't use window.onLoad like this in production, because it can only listen to one function.
