--- a/map.template.html
+++ b/map.template.html
@@ -12,7 +12,7 @@
 <header class="header">
     <a class="button" href="/">Go Back</a>
 </header>
-<div id="container" style="width: 850px; height: 850px; border:1px solid black;">
+<div id="container" style="margin: 0px 0px 50px 50px;width: 850px; height: 850px; border:1px solid black;">
     <svg id="demo-tiger" xmlns="http://www.w3.org/2000/svg" style="display: inline; width: inherit; min-width: inherit; max-width: inherit; height: inherit; min-height: inherit; max-height: inherit; " viewBox="0 0 8000 8000">
         <defs>
             ###PATTERN###
