--- a/map.template.html
+++ b/map.template.html
@@ -10,9 +10,15 @@
   </head>
   <body class="export">
     <main class="export__main">
-      <nav class="export__nav">
-        <button class="button" id="menu-toggle">Menu</button>
-      </nav>
+      <div class="export__panel info-panel">
+        <button class="button button--toggle" id="info-panel-toggle">Info</button>
+        <div class="export__panel-scroll-content">
+          <h3>Player Info</h3><br/>
+          <div class="info-panel__player-info">
+            ###PLAYERINFO###
+          </div>
+        </div>
+      </div>
 
       <div id="container" class="export__map">
         <svg
@@ -33,7 +39,16 @@
           ###SVG###
         </svg>
       </div>
-      <div class="export__menu">###EXTRAS### ###DOWNLOAD###</div>
+      <div class="export__panel edit-panel">
+        <button class="button button--toggle" id="edit-panel-toggle">Edit</button>
+        <div class="export__panel-scroll-content">
+          <h3>Edit</h3><br/>
+          <div class="edit-panel__extras">
+            ###EXTRAS###
+            ###DOWNLOAD###
+          </div>
+        </div>
+      </div>
     </main>
 
     <script type="text/javascript" src="svg-pan-zoom.js"></script>
