--- a/not_used_resources/map.template.html
+++ b/not_used_resources/map.template.html
@@ -62,7 +62,7 @@
       </div>
     </main>
 
-    <script type="text/javascript" src="/assets/js/svg-pan-zoom.js"></script>
+    <script type="text/javascript" src="/assets/js/svg-pan-zoom.js.min.ja"></script>
     <script type="text/javascript" src="/js/export.js"></script>
   </body>
 </html>
